--- a/src/test/index.html
+++ b/src/test/index.html
@@ -3,7 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="./index.styl">
+    <link rel="stylesheet" href="./index.styl?test=2342432">
+    <link rel="stylesheet" href="./index1.styl?test=2342432">
 </head>
 <body>
 
